--- a/Meusite/contato.css
+++ b/Meusite/contato.css
@@ -25,18 +25,18 @@ body{
 .apt nav ul{
     text-align: right;
     margin: 20px 50px 0 0;
-   
+
 }
 
 .apt nav li{
     margin-left: 10px;
     border: solid 1px rgb(255, 255, 255);
     display: inline-block;
-    
+
 }
 .apt nav a{
     letter-spacing: 2px;
-    
+
     background: rgba(0, 0, 0, 0.8);
     font-size: small;
     color: white;
@@ -44,12 +44,12 @@ body{
     padding: 15px;
     text-decoration: none;
     text-transform: uppercase;
-    
+
 
 }
 .apt nav a:hover{
     background: rgba(0, 0, 0, 0.479);
-    
+
 }
 .content_section{
     font-family: 'Courier New', Courier, monospace;
@@ -62,32 +62,32 @@ body{
     box-sizing: border-box;
     border: black solid;
 
-}  
+}
 .content_section img{
     float: left;
     clear: left;
     padding: 15px 10px;
 
-}  
+}
 .content_section p{
-    
-    float: right;
-    padding: 20px 10px;
 
-}  
+    float: right;
+    padding: 4% 3%;
+
+}
 .Email{
     clear: both;
 }
 
 
- 
+
 footer{
     color: white;
     text-shadow: 2px 2px 2px black;
     text-align: center;
     background: gray;
-    margin-top: 15px;
-    padding: 20px;
-    
+    margin-top: 5%;
+    padding: 2%;
+
 
 }
